# IC-Vibe-Coding-Template-Rust

./: Cargo.toml  Docs_CN.md  Docs_EN.md  ENVIRONMENT_SETUP.md  INTERNET_IDENTITY_SETUP.md  INTRODUCTION_CN.md  INTRODUCTION_EN.md  LICENSE  LOCAL_SETUP.md  MECHANISM_CN.md  MECHANISM_EN.md  README.md  README_EARN.md  README_ZH.md  TOKEN_BALANCE_USAGE.md  TUTORIAL_CN.md  TUTORIAL_EN.md  bitcoin_configuration.md  canister_ids.json  ckbtc.md  demo.sh  dfx.json  dfx.json.md  dfx1.json  package-lock.json  package.json  tsconfig.json
bitcoin_data/: bitcoin.conf
bitcoin_data/regtest/: banlist.json  settings.json
bitcoin_data/regtest/chainstate/: 000005.ldb
scripts/: init_pools.sh  initialize_pools.js
src/backend/: Cargo.toml  backend.did
src/backend/src/: auth.rs  lib.rs  types.rs
src/faucet_backend/: Cargo.toml
src/faucet_backend/src/: lib.rs  types.rs
src/frontend/: index.html  main.tsx  package.json  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  CounterView.tsx  EarnView.tsx  GreetingView.tsx  LlmPromptView.tsx  index.ts
src/frontend/src/components/: AssetPool.tsx  CkbtcBalanceManager.tsx  CustomTokenAdder.tsx  Dashboard.tsx  EnvTest.tsx  LiquidityProvider.tsx  Loader.tsx  LocalTokenManager.tsx  MarketDetail.tsx  MigrateFAQ.tsx  MigrateInfoPanel.tsx  MigrateStepper.tsx  TokenBalanceDisplay.tsx  TokenBalanceExample.tsx  TransactionHistory.tsx  UserInfoDisplay.tsx  UserRegistration.tsx  WalletConnector.tsx  index.ts
src/frontend/src/hooks/: useLanguage.tsx
src/frontend/src/services/: InternetIdentityService.ts  (+3 more)
tests/src/: backend.test.ts
(+13 files in other folders)
