[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
serde = "1.0"
icrc-ledger-types = "0.1.10"
ic-cdk = "0.18"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-llm = "1.0.0"
rand = "0.8.5"
sha2 = "0.10.8"
serde_json = "1.0.134"