[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.14"
serde = "1.0.219"
icrc-ledger-types = "0.1.10"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.11"
ic-llm = "1.0.0"
sha2 = "0.10.9"
serde_json = "1.0.141"
